--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^3.7.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
