--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.7.1",
+    "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-content-loader": "^6.1.0",
