--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-chartjs-2": "^4.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
